# nervix

./: .gitignore  .nspl_history  AGENTS.md  Cargo.toml  Dockerfile.debian  LICENSE.md  README.md  build.rs  clippy.toml  commitlint.config.js  docker-compose.yml  justfile  pyproject.toml  rust-toolchain.toml
.cargo/: audit.toml
.github/workflows/: check.yaml  docker-build.yaml
.zellij/layouts/: local-3-nodes.kdl
cloudflare/docs-worker/: wrangler.jsonc
crates/client-core/: Cargo.toml
crates/client-core/examples/: session.rs
crates/client-core/src/: lib.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: lib.rs
crates/dataflow-graph/: Cargo.toml
crates/dataflow-graph/src/: lib.rs
crates/interconnect/: Cargo.toml
crates/interconnect/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: canonical.rs  expression.rs  lib.rs  message_error.rs  names.rs  remote.rs  resource.rs  schema.rs  statement.rs  timestamp.rs  udf.rs
crates/nervix-cli/: Cargo.toml
crates/nervix-cli/src/: main.rs
crates/nervix-roto/: Cargo.toml
crates/nervix-roto/src/: lib.rs
crates/nervix-vm/: Cargo.toml
crates/nervix-vm/benches/: vm.rs
crates/nervix-vm/src/: batch.rs  compiler.rs  error.rs  ir.rs  lib.rs  runtime.rs  semantics.rs
crates/nervix-wasm/: Cargo.toml
crates/nervix-wasm-protocol/: Cargo.toml  build.rs
crates/nervix-wasm-sdk/: Cargo.toml
crates/nervix-wasm-sdk/src/: abi.rs  context.rs  envelope.rs  error.rs  lib.rs  processor.rs
crates/nervix-wasm/src/: lib.rs
crates/nspl/: Cargo.toml
crates/nspl/examples/: parse.rs
crates/nspl/src/: client_statement.rs  lexer.rs  lib.rs  parser_support.rs  semantic_program.rs  server_statement.rs  statement.rs  udf.rs
crates/nspl/src/branch/: mod.rs
crates/nspl/src/client/: mod.rs
crates/nspl/src/codec/: mod.rs
crates/nspl/src/correlator/: mod.rs
crates/nspl/src/create_resource/: mod.rs
crates/nspl/src/deduplicator/: mod.rs
crates/nspl/src/describe_correlator/: mod.rs
crates/nspl/src/describe_deduplicator/: mod.rs
crates/nspl/src/describe_domain/: mod.rs
crates/nspl/src/describe_emitter/: mod.rs
crates/nspl/src/describe_endpoint/: mod.rs
crates/nspl/src/describe_ingestor/: mod.rs
crates/nspl/src/describe_lookup/: mod.rs
crates/nspl/src/describe_reingestor/: mod.rs
crates/nspl/src/describe_reorderer/: mod.rs
crates/nspl/src/describe_resource/: mod.rs
crates/nspl/src/describe_router/: mod.rs
crates/nspl/src/describe_stream/: mod.rs
crates/nspl/src/describe_wasm_processor/: mod.rs
crates/nspl/src/describe_window_processor/: mod.rs
crates/nspl/src/domain/: mod.rs
crates/nspl/src/drop_stmt/: mod.rs
crates/nspl/src/emitter/: mod.rs
crates/nspl/src/endpoint/: mod.rs
crates/nspl/src/forwarder/: mod.rs
crates/nspl/src/generator/: mod.rs
crates/nspl/src/inferencer/: mod.rs
crates/nspl/src/ingestor/: mod.rs
crates/nspl/src/junction/: mod.rs
crates/nspl/src/lookup/: mod.rs
crates/nspl/src/lookup_query/: mod.rs
crates/nspl/src/node_control/: mod.rs
crates/nspl/src/reingestor/: mod.rs
crates/nspl/src/relay/: mod.rs
crates/nspl/src/reorderer/: mod.rs
crates/nspl/src/router/: mod.rs
crates/nspl/src/schema/: avro.rs  json.rs  mod.rs  parse_as.rs
crates/nspl/src/show_cluster_status/: mod.rs
crates/nspl/src/show_create/: mod.rs
crates/nspl/src/show_stream_state/: mod.rs
crates/nspl/src/signaling_protocol/: mod.rs
crates/nspl/src/subscribe/: mod.rs
crates/nspl/src/unifier/: mod.rs
crates/nspl/src/upload_resource/: mod.rs
crates/nspl/src/user/: mod.rs
crates/nspl/src/vhost/: mod.rs
crates/nspl/src/vm_program/: ast.rs  lexer.rs  mod.rs  parser.rs  semantic.rs
crates/nspl/src/wasm_processor/: mod.rs
crates/nspl/src/window_processor/: aggregate.rs  mod.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/src/: lib.rs
crates/registry/: Cargo.toml
crates/registry/src/: lib.rs  stored.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  stored.rs
crates/web-console/: Cargo.toml  Trunk.toml  index.html
crates/web-console/public/: console.css
crates/web-console/src/: main.rs
docker/clickhouse/: https.xml
docker/elasticmq/: nginx.conf
docker/iceberg-rest/: init-datalake.sh
docker/mock-server/: Dockerfile  app.py
docker/nats/: nats-tls.conf
docker/prometheus/: web.yml
docker/pulsar/: start-tls.sh
docker/rabbitmq/: rabbitmq.conf
docker/redis/: redis.conf
docs/: book.toml
docs/src/: SUMMARY.md  architecture-and-internals.md  architecture.md  client-library.md  control-plane.md  data-plane.md  domains-and-time.md  emitters.md  examples.md  filter-map-functions.md  ingestors.md  introduction.md  license.md  lookups.md  manual.md  metrics-and-observability.md  nspl-agent-skill.md  nspl-overview.md  processors.md  relay.md  resources.md  roadmap.md  running-locally.md  schemas-and-codecs.md  sessions.md  udfs.md  wasm-guest-sdk.md  wasm-processor-guests.md  what-it-is-not.md
docs/theme/: nervix.css
examples/binance-websocket/: binance_websocket.nspl
examples/datalake/: .gitignore  README.md  datalake.nspl  duckdb_iceberg.sql  generate_datalake_load.py
examples/datalake/geo-wasm-guest/: Cargo.toml  build.rs
examples/datalake/geo-wasm-guest/src/: lib.rs
examples/iot/: generate_iot_load.py  iot.nspl
examples/nats-factory-windows/: generate_nats_factory_load.py  nats_factory_windows.nspl
examples/onnx-inference/: README.md  batched.nspl  per-message.nspl
examples/wasm-processors/: .gitignore  INTERFACE.md  README.md  wasm-dual.nspl
examples/wasm-processors/rust-guest/: Cargo.toml
examples/wasm-processors/rust-guest/src/: lib.rs
kube/: README.md
kube/resources/: kafka.yaml  (+3 more)
scripts/: build_book.py  download_onnxruntime.sh  generate_dev_tls.sh  kube_app.sh  kube_app_down.sh  kube_cli.sh  kube_deps.sh  kube_deps_down.sh  mdbook_llms.py  publish_docs_alias.py  purge_cloudflare_cache.py  train_simple_onnx.py  upload_book_to_r2.py
src/: application.rs  cluster.rs  lib.rs  main.rs  memory_pressure.rs  metrics.rs  resource.rs  runtime_ack.rs  runtime_schema.rs
tests/: scenarios.rs
(+219 files in other folders)
