[package]
edition.workspace = true
license-file.workspace = true
name = "nervix-dataflow-graph"
version.workspace = true

[lints]
workspace = true

[dependencies]
ascii-dag = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
