[package]
edition.workspace = true
license-file.workspace = true
name = "nervix-models"
version.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
error-stack = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true }
sorted_vec = { workspace = true, features = ["serde"] }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
