[package]
edition.workspace = true
license-file.workspace = true
name = "nervix-roto"
version.workspace = true

[lints]
workspace = true

[dependencies]
ahash = { workspace = true }
arrow-arith = { workspace = true }
arrow-array = { workspace = true }
arrow-cast = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }
fastrand = { workspace = true }
nervix-models = { workspace = true }
nervix-nspl = { workspace = true }
nervix-vm = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
roto = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
triomphe = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
