[package]
edition.workspace = true
license-file.workspace = true
name = "nervix-wasm"
version.workspace = true

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
nervix-models = { workspace = true }
nervix-wasm-protocol = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
triomphe = { workspace = true }
wasmtime = { workspace = true }

[dev-dependencies]
arrow-array = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
