[package]
edition.workspace = true
license-file.workspace = true
name = "nervix-web-console"
version.workspace = true

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
charming = { workspace = true, features = ["wasm"] }
console_error_panic_hook = { workspace = true }
futures-channel = { workspace = true }
futures-util = { workspace = true }
gloo-net = { workspace = true, features = ["http", "websocket"] }
js-sys = { workspace = true }
leptos = { workspace = true }
nervix-dataflow-graph = { workspace = true }
nervix-models = { workspace = true }
nervix-nspl = { workspace = true, features = ["client"] }
nervix-proto = { workspace = true }
prost = { workspace = true }
url = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
  "Blob",
  "Document",
  "Element",
  "File",
  "FileList",
  "FormData",
  "HtmlDivElement",
  "HtmlInputElement",
  "Location",
  "Request",
  "RequestInit",
  "Response",
  "Window",
] }
