[package]
edition = "2024"
name = "nervix-wasm-processor-rust-guest"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
arrow-array = "58"
arrow-schema = "58"
nervix-wasm-sdk = { path = "../../../crates/nervix-wasm-sdk" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[workspace]
